# langues

./: Cargo.toml  LICENSE  README.md
src/: conjugation.rs  fetcher.rs  language.rs  lib.rs  question.rs  tense.rs
