[package]
name = "espagnol"
version = "0.0.1"
authors = ["Nil Goyette <nil.goyette@gmaik.com>"]

description = "TrackVis (*.trk) reader and writer"
repository = "https://github.com/imeka/trk-io"
readme = "README.md"

[dependencies]
app_dirs = "1.1"
docopt = "0.8"
rand = "0.4"
reqwest = "0.8"
select = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
